Fix uncollapse link and clicking on images (#1705)
* Add collapsed image link text

* Prevent collapsed image from being partially hidden when hovering over

* Allow clicking on image node to open in new tab

* Open original media in new tab instead of canvas

* Update tests

* Make eslint happy

--- a/ext/css/structured-content.css
+++ b/ext/css/structured-content.css
@@ -41,8 +41,6 @@
 }
 .gloss-image-link:hover {
     color: var(--accent-color-dark);
-}
-.gloss-image-link[href]:hover {
     cursor: pointer;
 }
 .gloss-image-container-overlay {
